manifests/base/microservices/carts-db/carts-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: carts-db
  namespace: sock-shop
  labels:
    name: carts-db
spec:
  serviceName: "carts-db"
  replicas: 1
  selector:
    matchLabels:
      name: carts-db
  template:
    metadata:
      labels:
        name: carts-db
    spec:
      containers:
        - name: carts-db
          image: quay.io/mongodb/mongodb:org-4.4-standalone-ubuntu2204 # MongoDB (unlike SQL) no schema needed upfront!
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongo
              containerPort: 27017
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: carts-db-vol
              mountPath: /data/db
            - name: carts-db-temp-vol
              mountPath: /tmp
      volumes:
        - name: carts-db-temp-vol
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: carts-db-vol
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-sc
        resources:
          requests:
            storage: 1Gi
