manifests/base/microservices/carts-db/carts-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  labels:
    name: carts-db
  namespace: sock-shop
spec:
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: carts-db
