manifests/base/microservices/carts-db/carts-db-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: carts-db-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: carts-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: carts
      ports:
        - protocol: TCP
          port: 27017
